--- a/assignment10.html
+++ b/assignment10.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css"/>
     <link rel="stylesheet" href="./assets/style/index.css">
 </head>
 <body>
-    
+    <div class="container">
+        <section class="wheather">
+            <div class="left">
+                <div class="top">
+                    <h2>Hello Mahdi</h2>
+                    <span>Today is mostly sunny</span>
+                </div>
+                <div class="bottom">
+                    <h2>29°C</h2>
+                    <span>Firenze, Italia</span>
+                </div>
+            </div>
+            <div class="right">
+                <img src="./assets/image/sun_behind_small_cloud_color 1.png" alt="sunny">
+            </div>
+        </section>
+    </div>
 </body>
 </html>
