--- a/assignment10.html
+++ b/assignment10.html
@@ -29,6 +29,24 @@
                 <img src="./assets/image/sun_behind_small_cloud_color 1.png" alt="sunny">
             </div>
         </section>
+        <section class="calender">
+            <div class="top">
+                <h2>Tuesday, 11 Jun</h2>
+                <span>Today’s agenda</span>
+            </div>
+            <div class="bottom">
+                <ul>
+                    <li>
+                        <h3>BB Daily</h3>
+                        <span>10:30, Head Office</span>    
+                    </li>
+                    <li>
+                        <h3>CodingFront - S10</h3>
+                        <span>18:00, Google Meet</span>    
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
 </body>
 </html>
