--- a/assignment10.html
+++ b/assignment10.html
@@ -47,6 +47,43 @@
                 </ul>
             </div>
         </section>
+        <section class="email">
+            <div class="top">
+                <h3>Email Inbox</h3>
+                <span>mahdisharei.95@gmail.com</span>
+            </div>
+            <div class="bottom">
+                <ul>
+                    <li>
+                        <div class="logo">
+                            <img src="./assets/image/Rectangle 1 (10).png" alt="steam logo">
+                        </div>
+                        <div class="description">
+                            <h3>RoboCop: Rogue City from your Steam wishlist is now on sale!</h3>
+                            <span>Steam</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="logo">
+                            <img src="./assets/image/Rectangle 1 (12).png" alt="github logo">
+                        </div>
+                        <div class="description">
+                            <h3>Destination: Poolside</h3>
+                            <span>Steam</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="logo">
+                            <img src="./assets/image/Rectangle 1 (13).png" alt="h&m logo">
+                        </div>
+                        <div class="description">
+                            <h3>Destination: Poolside</h3>
+                            <span>H & M</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
 </body>
 </html>
