--- a/assignment10.html
+++ b/assignment10.html
@@ -49,7 +49,7 @@
         </section>
         <section class="email">
             <div class="top">
-                <h3>Email Inbox</h3>
+                <h2>Email Inbox</h2>
                 <span>mahdisharei.95@gmail.com</span>
             </div>
             <div class="bottom">
@@ -84,6 +84,39 @@
                 </ul>
             </div>
         </section>
+        <section class="feeling">
+            <div class="top">
+                <h2>How are you feeling?</h2>
+                <span>Track your mood</span>
+            </div>
+            <ul>
+                <li>
+                    <img src="./assets/image/Group (1).png" alt="excellent emoji">
+                    <span>Excellent</span>
+                </li>
+                <li>
+                    <img src="./assets/image/Group (2).png" alt="Sleepy emoji">
+                    <span>Sleepy</span>
+                </li>
+                <li>
+                    <img src="./assets/image/face_with_thermometer_color 1.png" alt="Sick emoji">
+                    <span>Sick</span>
+                </li>
+                <li>
+                    <img src="./assets/image/Clip path group.png" alt="Hungry emoji">
+                    <span>Hungry</span>
+                </li>
+                <li>
+                    <img src="./assets/image/hot_face_color 1.png" alt="Hot emoji">
+                    <span>Hot</span>
+                </li>
+                <li>
+                    <img src="./assets/image/face_with_diagonal_mouth_color 1.png" alt="Meh emoji">
+                    <span>Meh</span>
+                </li>
+            </ul>
+        </section>
+
     </div>
 </body>
 </html>
