--- a/assignment10.html
+++ b/assignment10.html
@@ -116,7 +116,16 @@
                 </li>
             </ul>
         </section>
-
+        <section class="quote">
+            <div class="top">
+                <h2>Quote of the Day</h2>
+                <span>Make sure to remember</span>
+            </div>
+            <div class="bottom">
+                <span>“If you can't dazzle them with brilliance, baffle them with bullshit.”</span>
+                <div class="author">W.C. Fields</div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
