--- a/assignment10.html
+++ b/assignment10.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <div class="container">
-        <section class="wheather">
+        <div class="left-desktop">
+            <section class="wheather">
             <div class="left">
                 <div class="top">
                     <h2>Hello Mahdi</h2>
@@ -28,8 +29,8 @@
             <div class="right">
                 <img src="./assets/image/sun_behind_small_cloud_color 1.png" alt="sunny">
             </div>
-        </section>
-        <section class="calender">
+            </section>
+            <section class="calender">
             <div class="top">
                 <h2>Tuesday, 11 Jun</h2>
                 <span>Today’s agenda</span>
@@ -46,8 +47,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="email">
+            </section>
+            <section class="email">
             <div class="top">
                 <h2>Email Inbox</h2>
                 <span>mahdisharei.95@gmail.com</span>
@@ -83,8 +84,25 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="feeling">
+            </section>
+        </div>
+        <div class="right-desktop">
+            <div class="top-desktop">
+                <section class="news">
+                    <div class="header">
+                        <ul>
+                            <li>Gaming</li>
+                            <li>Technology</li>
+                            <li>Crypto</li>
+                        </ul>
+                    </div>
+                    <div class="main">
+                        <img src="./assets/image/Frame 2.png" alt="news">
+                    </div>
+                </section>
+            </div>
+            <div class="bottom-desktop">
+                <section class="feeling">
             <div class="top">
                 <h2>How are you feeling?</h2>
                 <span>Track your mood</span>
@@ -115,8 +133,8 @@
                     <span>Meh</span>
                 </li>
             </ul>
-        </section>
-        <section class="quote">
+                </section>
+                <section class="quote">
             <div class="top">
                 <h2>Quote of the Day</h2>
                 <span>Make sure to remember</span>
@@ -125,7 +143,9 @@
                 <span>“If you can't dazzle them with brilliance, baffle them with bullshit.”</span>
                 <div class="author">W.C. Fields</div>
             </div>
-        </section>
+                </section>
+            </div>
+        </div>
     </div>
 </body>
 </html>
